--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "prod": "ng build --configuration production"
   },
   "private": true,
   "dependencies": {
@@ -19,9 +20,11 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "bootstrap-icons": "^1.10.3",
+    "http-proxy-middleware": "^2.0.6",
     "lord-icon-element": "^4.1.0",
     "lottie-web": "^5.10.2",
     "rxjs": "~7.8.0",
+    "sass-list": "^2.0.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
