--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "prod": "ng build --configuration production"
+    "prod": "ng build --configuration production",
+    "deploy": "ng build --configuration production && firebase deploy --only hosting"
   },
   "private": true,
   "dependencies": {
