--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@types/three": "^0.152.0",
     "bootstrap-icons": "^1.10.3",
     "http-proxy-middleware": "^2.0.6",
     "lord-icon-element": "^4.1.0",
     "lottie-web": "^5.10.2",
     "rxjs": "~7.8.0",
     "sass-list": "^2.0.2",
+    "three": "^0.152.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
@@ -41,6 +43,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "typescript": "~4.9.4",
+    "vite": "^4.3.5",
     "webpack": "^5.77.0"
   }
 }
