--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
+    "@angular/fire": "^7.6.1",
     "@angular/forms": "^15.2.0",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "@types/three": "^0.152.0",
     "bootstrap-icons": "^1.10.3",
+    "firebase": "^10.4.0",
     "http-proxy-middleware": "^2.0.6",
     "lord-icon-element": "^4.1.0",
     "lottie-web": "^5.10.2",
